# codespaceproject

./: .gitignore  pyproject.toml
notebooks/: data.csv  fantasy_zookeeper.ipynb  numpy.ipynb  pandas.ipynb  scikit_learn.ipynb  the-great-iris-festival.ipynb
